@@ -1,5 +1,6 @@
 2023-12-15 Jan Kotanski <jankotan@gmail.com>
 	* add support for fetching metadata from multi-scan Nexus files (#542)
+	* add --nexus-path option to nxsfileinfo attachment (#544)
 	* tagged as v3.55.0
 
 2023-12-13 Jan Kotanski <jankotan@gmail.com>
